--- a/SCME.UI/Properties/Resources.resx
+++ b/SCME.UI/Properties/Resources.resx
@@ -778,4 +778,7 @@
   <data name="Total" xml:space="preserve">
     <value>Total</value>
   </data>
+  <data name="TOU" xml:space="preserve">
+    <value>TOU</value>
+  </data>
 </root>
