--- a/SCME.UI/Properties/Resources.ru-RU.resx
+++ b/SCME.UI/Properties/Resources.ru-RU.resx
@@ -753,4 +753,7 @@
   <data name="Total" xml:space="preserve">
     <value>Всего</value>
   </data>
+  <data name="TOU" xml:space="preserve">
+    <value>TOU</value>
+  </data>
 </root>
