Бинарник с новой логикой IOTOU
Горячая правка IOTOU и небольшие изменения для профилей

--- a/SCME.UI/Properties/Resources.resx
+++ b/SCME.UI/Properties/Resources.resx
@@ -793,4 +793,7 @@
   <data name="TGT" xml:space="preserve">
     <value>tGT</value>
   </data>
+  <data name="TOUITM" xml:space="preserve">
+    <value>Amperage (ITM), A</value>
+  </data>
 </root>
