Переделал IOTOU, запуск в режиме эмуляции ведёт себя так же как IORAC. Исправил баги с TOU(не срабатывал handler для ошибки) Добавил TOU на экран оператора Поднял netframework до 4.6.1 Сделал возможность работать локально/централизировано Переработал SQL и SQLITE сервисы сохранения профилей Теперь Profile и ProfileItem содержат помимо своего гуида, гуид следующего поколения, он нужен для того чтобы у каждого нового профиля был одинаковый ключ, как удалённо так и локально (Если использовать Guid.NewGuid() в функции InsertProfileItem то ключи будут разные в базах для одного и того же профиля). Изменил цепочку методов сохранения профилей, теперь она возвращает структуру которая содержит новый профиль. Добавил обновление профилей после сохранения (загрузка нового ключа и версии, плюс генерация ключа следующего поколения)

--- a/SCME.UI/Properties/Resources.ru-RU.resx
+++ b/SCME.UI/Properties/Resources.ru-RU.resx
@@ -759,14 +759,11 @@
   <data name="Amperage" xml:space="preserve">
     <value>Сила тока</value>
   </data>
-  <data name="ITM" xml:space="preserve">
-    <value>ITM</value>
-  </data>
   <data name="TGD" xml:space="preserve">
-    <value>tGD</value>
+    <value>tGD, us</value>
   </data>
   <data name="TGT" xml:space="preserve">
-    <value>tGT</value>
+    <value>tGT, us</value>
   </data>
   <data name="TOUITM" xml:space="preserve">
     <value>Сила тока (ITM),  А</value>
