Выполнил пункты: Добавить методы в интерфейс WCF Изменить интерфейсный модуль Commutation Unit в Service Добавить кнопку Оператор режим сборки (установка глобального параметра) Добавить в режиме наладчика кнопки управления системой безопасности Добавить в строке состояний отображение какая система безопасности
Немножно отрефакторил MainWindow

Осталось тестирование

--- a/SCME.UI/Properties/Resources.resx
+++ b/SCME.UI/Properties/Resources.resx
@@ -793,4 +793,13 @@
   <data name="TOUITM" xml:space="preserve">
     <value>Amperage (ITM), A</value>
   </data>
+  <data name="OperatorBuildMode" xml:space="preserve">
+    <value>Operator in Build Mode</value>
+  </data>
+  <data name="SafetySystemExternal" xml:space="preserve">
+    <value>Turn on ex the  safety</value>
+  </data>
+  <data name="SafetySystemInternal" xml:space="preserve">
+    <value>Turn on in the  safety</value>
+  </data>
 </root>
