--- a/SCME.ProfileBuilder/Properties/Resources.en-US.resx
+++ b/SCME.ProfileBuilder/Properties/Resources.en-US.resx
@@ -717,4 +717,7 @@
   <data name="QrrTqTrrMeasureBy9050Method" xml:space="preserve">
     <value>Measure Trr by 90%-50% method</value>
   </data>
+  <data name="TOUITM" xml:space="preserve">
+    <value>Amperage (ITM), A</value>
+  </data>
 </root>
