--- a/SCME.ProfileBuilder/Properties/Resources.en-US.resx
+++ b/SCME.ProfileBuilder/Properties/Resources.en-US.resx
@@ -720,4 +720,7 @@
   <data name="TOUITM" xml:space="preserve">
     <value>Amperage (ITM), A</value>
   </data>
+  <data name="Edit" xml:space="preserve">
+    <value>Edit</value>
+  </data>
 </root>
