--- a/SCME.ProfileBuilder/Properties/Resources.resx
+++ b/SCME.ProfileBuilder/Properties/Resources.resx
@@ -720,4 +720,7 @@
   <data name="TOUITM" xml:space="preserve">
     <value>Сила тока (ITM),  А</value>
   </data>
+  <data name="Edit" xml:space="preserve">
+    <value>Изменить</value>
+  </data>
 </root>
