--- a/SCME.WpfControlLibrary/Properties/Resources.en-US.resx
+++ b/SCME.WpfControlLibrary/Properties/Resources.en-US.resx
@@ -723,4 +723,10 @@
   <data name="Edit" xml:space="preserve">
     <value>Edit</value>
   </data>
+  <data name="Error" xml:space="preserve">
+    <value>Error</value>
+  </data>
+  <data name="MissingMMECodes" xml:space="preserve">
+    <value>MissingMMECodes</value>
+  </data>
 </root>
