--- a/SCME.WpfControlLibrary/Properties/Resources.resx
+++ b/SCME.WpfControlLibrary/Properties/Resources.resx
@@ -732,4 +732,7 @@
   <data name="IsActive" xml:space="preserve">
     <value>Активен</value>
   </data>
+  <data name="FonstSize" xml:space="preserve">
+    <value>Размер шрифта</value>
+  </data>
 </root>
