Добавил добавление профилей приблизил внешний вид к иначальному добавил методы для БД сервиса Сделал общий рефакторинг на var для переменных

--- a/SCME.WpfControlLibrary/Properties/Resources.en-US.resx
+++ b/SCME.WpfControlLibrary/Properties/Resources.en-US.resx
@@ -732,7 +732,10 @@
   <data name="IsActive" xml:space="preserve">
     <value>Active</value>
   </data>
-  <data name="FonstSize" xml:space="preserve">
+  <data name="FontSize" xml:space="preserve">
     <value>Font size</value>
+  </data>
+  <data name="ProfileExists" xml:space="preserve">
+    <value>A profile with the same name already exists</value>
   </data>
 </root>
