--- a/SCME.WpfControlLibrary/Properties/Resources.resx
+++ b/SCME.WpfControlLibrary/Properties/Resources.resx
@@ -792,5 +792,10 @@
   <data name="ListMME" xml:space="preserve">
     <value>Список КИП</value>
   </data>
-  
+  <data name="AtuPrsmMin">
+    <value>PRSM min, kW</value>
+  </data>
+  <data name="AtuPrsmMax">
+    <value>PRSM max, kW</value>
+  </data>
 </root>
