BF 06 07 08 and other

--- a/SCME.UI/Properties/Resources.resx
+++ b/SCME.UI/Properties/Resources.resx
@@ -802,4 +802,10 @@
   <data name="ErrorRealisation" xml:space="preserve">
     <value>Error realisation</value>
   </data>
+  <data name="PRSM_Min">
+    <value>PRSM min, kW</value>
+  </data>
+  <data name="PRSM_Max">
+    <value>PRSM max, kW</value>
+  </data>
 </root>
