--- a/SCME.UI/Properties/Resources.resx
+++ b/SCME.UI/Properties/Resources.resx
@@ -805,4 +805,8 @@
   <data name="MessageErrorSaveTestFault" xml:space="preserve">
     <value>An error occurred, the changes will not be saved</value>
   </data>
+  <data name="ProfilePageToolTip" xml:space="preserve">
+    <value>Profiles not editable in sync with central server</value>
+  </data>
+  
 </root>
