--- a/SCME.UI/Properties/Resources.ru-RU.resx
+++ b/SCME.UI/Properties/Resources.ru-RU.resx
@@ -807,4 +807,7 @@
   <data name="ErrorRealisation" xml:space="preserve">
     <value>Ошибка реализации</value>
   </data>
+  <data name="Sync" xml:space="preserve">
+    <value>Синхронизация</value>
+  </data>
 </root>
