Forced synchronization if there was an update for the central database. KEYBOARD for validation Textbox. Total profiles on the login page. Placeholder. Bug fix loading profiles (internaciolization semicolon).

--- a/SCME.WpfControlLibrary/Properties/Resources.resx
+++ b/SCME.WpfControlLibrary/Properties/Resources.resx
@@ -801,4 +801,7 @@
     <data name="MinIgt_mA" xml:space="preserve">
     <value>MinMax. IGT, mA</value>
   </data>
+  <data name="Search" xml:space="preserve">
+    <value>Search</value>
+  </data>
 </root>
