--- a/SCME.WpfControlLibrary/Properties/Resources.ru-RU.resx
+++ b/SCME.WpfControlLibrary/Properties/Resources.ru-RU.resx
@@ -801,4 +801,7 @@
   <data name="AtuPrsmMax">
     <value>PRSM max, kW</value>
   </data>
+  <data name="Search" xml:space="preserve">
+    <value>Поиск</value>
+  </data>
 </root>
