BF 01 BF 17 changes BF 16 BF 10 changes BF 04 Hot bug fixs

--- a/SCME.UI/Properties/Resources.resx
+++ b/SCME.UI/Properties/Resources.resx
@@ -367,6 +367,9 @@
   <data name="LoginPage_Title" xml:space="preserve">
     <value>Login</value>
   </data>
+  <data name="SelectWorkModePageTitle" xml:space="preserve">
+    <value>Work mode</value>
+  </data>
   <data name="CurrentLimit_mA" xml:space="preserve">
     <value>Current limit, mA</value>
   </data>
