--- a/SCME.UI/Properties/Resources.ru-RU.resx
+++ b/SCME.UI/Properties/Resources.ru-RU.resx
@@ -810,4 +810,7 @@
   <data name="Sync" xml:space="preserve">
     <value>Синхронизация</value>
   </data>
+  <data name="SelectWorkModePageTitle" xml:space="preserve">
+    <value>Режим работы</value>
+  </data>
 </root>
