BF 21 BF 01 Beta version

--- a/SCME.UI/Properties/Resources.resx
+++ b/SCME.UI/Properties/Resources.resx
@@ -838,4 +838,8 @@
   <data name="Sync" xml:space="preserve">
     <value>Synchronization</value>
   </data>
+  <data name="ProfileNotChanged" xml:space="preserve">
+    <value>Profile Not Changed</value>
+  </data>
+  
 </root>
