Class device, class by RT UI profile page

--- a/SCME.UI/Properties/Resources.resx
+++ b/SCME.UI/Properties/Resources.resx
@@ -829,6 +829,9 @@
   <data name="DeviceRTClass" xml:space="preserve">
     <value>Class by RT</value>
   </data>
+  <data name="DeviceClass" xml:space="preserve">
+    <value>Class</value>
+  </data>
   <data name="NoResults" xml:space="preserve">
     <value>No results</value>
   </data>
