--- a/SCME.UI/Properties/Resources.ru-RU.resx
+++ b/SCME.UI/Properties/Resources.ru-RU.resx
@@ -822,4 +822,7 @@
   <data name="ErrorWriteResult" xml:space="preserve">
     <value>Ошибка отправки результатов на сервер</value>
   </data>
+  <data name="DeviceClass" xml:space="preserve">
+    <value>Класс</value>
+  </data>
 </root>
