--- a/SCME.WpfControlLibrary/Properties/Resources.ru-RU.resx
+++ b/SCME.WpfControlLibrary/Properties/Resources.ru-RU.resx
@@ -376,10 +376,10 @@
     <value>Сообщение</value>
   </data>
   <data name="MinVdrm_V" xml:space="preserve">
-    <value>Мин. UDRM, В</value>
+    <value>Мин. Ub0, В</value>
   </data>
   <data name="MinVrrm_V" xml:space="preserve">
-    <value>Мин. URRM, В</value>
+    <value>Мин. Ub0, В</value>
   </data>
   <data name="Mode" xml:space="preserve">
     <value>Режим</value>
@@ -559,7 +559,7 @@
     <value>Значение</value>
   </data>
   <data name="VdrmV" xml:space="preserve">
-    <value>UDRM, В</value>
+    <value>Ub0, В</value>
   </data>
   <data name="Vgt" xml:space="preserve">
     <value>UGT</value>
@@ -580,7 +580,7 @@
     <value>Напр. обрат., В</value>
   </data>
   <data name="VrrmV" xml:space="preserve">
-    <value>URRM, В</value>
+    <value>Ub0, В</value>
   </data>
   <data name="Vtm" xml:space="preserve">
     <value>Стат. потери</value>
