--- a/SCME.dbViewer/Properties/Resources.resx
+++ b/SCME.dbViewer/Properties/Resources.resx
@@ -118,10 +118,10 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="AverageCurrent" xml:space="preserve">
-    <value>Average current</value>
+    <value>ITAV</value>
   </data>
   <data name="Code" xml:space="preserve">
-    <value>Subject number</value>
+    <value>Subject num</value>
   </data>
   <data name="Constructive" xml:space="preserve">
     <value>Constructive</value>
@@ -162,7 +162,7 @@
   <data name="ProfileID" xml:space="preserve">
     <value>Profile identificator</value>
   </data>
-  <data name="ProfName" xml:space="preserve">
+  <data name="ProfileName" xml:space="preserve">
     <value>Profile name</value>
   </data>
   <data name="Reason" xml:space="preserve">
@@ -181,7 +181,7 @@
     <value>Omnity</value>
   </data>
   <data name="SiType" xml:space="preserve">
-    <value>Silicon</value>
+    <value>Si</value>
   </data>
   <data name="Status" xml:space="preserve">
     <value>Status</value>
@@ -191,9 +191,6 @@
   </data>
   <data name="Ts" xml:space="preserve">
     <value>Date</value>
-  </data>
-  <data name="TsZeroTime" xml:space="preserve">
-    <value>Date measured with zero time</value>
   </data>
   <data name="Usr" xml:space="preserve">
     <value>Operator</value>
@@ -206,5 +203,53 @@
   </data>
   <data name="CodeOfNonMatch" xml:space="preserve">
     <value>Code of non match</value>
+  </data>
+  <data name="LoadDataFromDataBaseFault" xml:space="preserve">
+    <value>Error loading data from database</value>
+  </data>
+  <data name="Copy" xml:space="preserve">
+    <value>Copy</value>
+  </data>
+  <data name="Begin" xml:space="preserve">
+    <value>To begin</value>
+  </data>
+  <data name="Close" xml:space="preserve">
+    <value>To close</value>
+  </data>
+  <data name="Session" xml:space="preserve">
+    <value>Session</value>
+  </data>
+  <data name="Authentication" xml:space="preserve">
+    <value>Authentication</value>
+  </data>
+  <data name="Password" xml:space="preserve">
+    <value>Password</value>
+  </data>
+  <data name="User" xml:space="preserve">
+    <value>User</value>
+  </data>
+  <data name="BitCalculator" xml:space="preserve">
+    <value>Manage user permissions</value>
+  </data>
+  <data name="SetAdministrator" xml:space="preserve">
+    <value>Set user as admin</value>
+  </data>
+  <data name="SelectDCUser" xml:space="preserve">
+    <value>Select DC user</value>
+  </data>
+  <data name="FirstName" xml:space="preserve">
+    <value>First name</value>
+  </data>
+  <data name="LastName" xml:space="preserve">
+    <value>Last name</value>
+  </data>
+  <data name="MiddleName" xml:space="preserve">
+    <value>Middle name</value>
+  </data>
+  <data name="Authenticate" xml:space="preserve">
+    <value>Authenticate</value>
+  </data>
+  <data name="UserCredentials" xml:space="preserve">
+    <value>User credentials</value>
   </data>
 </root>
