--- a/SCME.WpfControlLibrary/Properties/Resources.resx
+++ b/SCME.WpfControlLibrary/Properties/Resources.resx
@@ -810,4 +810,7 @@
   <data name="Search" xml:space="preserve">
     <value>Search</value>
   </data>
+  <data name="PprofileNameAlreadyExists" xml:space="preserve">
+    <value>Профиль уже существует в одном из комплексов</value>
+  </data>
 </root>
